file name changed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>scrambler</title>
     <link rel="stylesheet" href="./sled.css">
     <link rel="short icon" href="./icons8-motorbike-64.png">
+    <script src="desert.js"></script>
 </head>
 <body>
     <div class="container">
